Begin transferring to idiomatic Configurate